stopped footer links from overlapping on resize

--- a/css/main.css
+++ b/css/main.css
@@ -571,7 +571,8 @@ footer {
   .fineprint { padding-top: 20px; }
   #contact { display: none; }
   #mobileContact { display: block; text-align: center; font-weight: 400; font-size: 40px; color: white; padding: 2%;  cursor: pointer; }
-  #mobileProjectLink { display: block; background-color: red; width: 100%; height: 5em; bottom: 5; top: 83%; position: fixed; z-index: 99;}
+  #mobileProjectLink { height: 4em; background-color: red; text-align: center; font-weight: 400; font-size: 40px; position: fixed; bottom: 0; right: 0; left: 0; top: auto; z-index: 98; width: 100%; }
+  footer { z-index: 99; }
   .gridContainer {  display: grid; grid-template-columns: repeat(2, 400px); grid-template-rows: repeat(2, 400px); margin-left: 10%; }
   .square { width: 400px; height: 400px; display: inline-block; }
   .projectOneContainer { left: 16%; max-width: 70%; }
@@ -611,7 +612,7 @@ footer {
 
 /*Mobiles landscape mobile*/
 @media screen and (max-width : 500px) {
-  #mobileProjectLink { display: block; background-color: red; width: 100%; height: 5em; bottom: 0; top: 83%;}
+  /* #mobileProjectLink { display: block; background-color: red; width: 100%; height: 5em; bottom: 0; top: 83%;} */
   .gridContainer {  display: grid; grid-template-columns: repeat(2, 440px); grid-template-rows: repeat(3, 440px); margin-left: 5%; }
   .square { width: 440px; height: 440px; display: inline-block; }
   .projectOneContainer { max-width: 90%; padding-right: 0; }
@@ -629,8 +630,6 @@ footer {
 @media screen and (max-width : 480px) {
   .contactLink { font-size: 55%; display: inline-block; }
   .fineprint { padding-top: 20px; }
-  #contact { display: none; }
-  #mobileContact { display: inline-block; text-align: center; font-weight: 400; font-size: 40px; color: white; padding: 4%; padding-left: 17%; cursor: pointer; }
   .gridContainer {  display: grid; grid-template-columns: repeat(1, 350px); grid-template-rows: repeat(6, 350px); margin-left: 25px;}
   .square { width: 350px; height: 350px; display: block; }
   .projectOneContainer { max-width: 90%; }
